cabal-version:      2.4
name:               bytestring-aeson-orphans
version:            0.1.0.0
synopsis:           Aeson instances for ByteString, using base 64 encoding
description:
  Encode ByteStrings as valid JSON using Aeson.  The instances provided by this
  package use base64 encoding to ensure that the ByteString does not contain
  invalid (for JSON) characters.

homepage:           https://github.com/obsidiansystems/bytestring-aeson-orphans
bug-reports:
  https://github.com/obsidiansystems/bytestring-aeson-orphans/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          (c) 2021 Obsidian Systems LLC
category:           Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:  MyLib
  other-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  build-depends:    base >=4 && <5
  hs-source-dirs:   src
  default-language: Haskell2010
